Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -27,5 +27,7 @@ labels:
  - 地理位置 [比如 美国佛罗里达]
  - 版本 [比如 0.0.1]
 
-**补充信息**
-任何您认为合适的信息，请进行补充
+**图书文件**
+如果您提交的BUG，出现在特定的图书当中。
+请将那本图书，压缩后，上传到这里，方便我们进行分析。
+多谢
