Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -29,5 +29,4 @@ labels:
 
 **图书文件**
 如果您提交的BUG，出现在特定的图书当中。
-请将那本图书，压缩后，上传到这里，方便我们进行分析。
-多谢
+请将那本图书压缩后（必须是zip格式，Github不支持epub后缀文件的上传），上传到这里，方便我们进行分析，多谢。
