Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -8,25 +8,24 @@ labels:
 **问题描述**
 请简单描述一下，发生了什么，遇到什么问题
 
-**如何复现**
+
+**设备信息（很重要）:**
+手机型号，系统版本，如果有特殊的网络环境，比如在国外，请声明
+
+
+**（如果适用，请添加）如何复现**
 请描述一下复现这个问题的操作步骤：
 1. Go to '...'
 2. Click on '....'
 3. Scroll down to '....'
 4. See error
 
-**应该出现的行为**
-简单描述一下，应该是怎样的
 
-**截图**
-如果适用，请提交截图
+**（如果适用，请添加）截图**
+请添加相关错误的截图
 
-**设备信息（很重要）:**
- - 设备型号: [比如 小米8]
- - 系统版本: [比如 iOS8.1]
- - 地理位置 [比如 美国佛罗里达]
- - 版本 [比如 0.0.1]
 
-**图书文件**
+
+**（如果适用，请添加）图书文件**
 如果您提交的BUG，出现在特定的图书当中。
 请将那本图书压缩后（必须是zip格式，Github不支持epub后缀文件的上传），上传到这里，方便我们进行分析，多谢。
