--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -6,26 +6,11 @@ labels:
 ---
 
 **问题描述**
-请简单描述一下，发生了什么，遇到什么问题
+在什么手机（品牌，系统版本），做什么操作，遇到什么问题？
 
 
-**设备信息（很重要）**
-手机型号，系统版本，如果有特殊的网络环境，比如在国外，请声明
-
-
-**（如果适用，请添加）如何复现**
-请描述一下复现这个问题的操作步骤：
-1. Go to '...'
-2. Click on '....'
-3. Scroll down to '....'
-4. See error
-
-
-**（如果适用，请添加）截图**
-请添加相关错误的截图
-
-
-
-**（如果适用，请添加）图书文件**
-如果您提交的BUG，出现在特定的图书当中。
-请将那本图书压缩后（必须是zip格式，Github不支持epub后缀文件的上传），上传到这里，方便我们进行分析，多谢。
+**补充信息（选填）**
+1.如果有明确的复现步骤，请详细说明
+2.如果是在国外，请说明
+3.如果有截图，请添加
+4.如果是特定图书出现的问题，请附加图书文件（需要压缩成.zip，才能提交为福建）
