Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,16 +1,12 @@
 ---
-name: 问题报告
-about: 创建一个BUG报告
+name: 功能需求
+about: 提交一个功能或优化建议
 labels: 
 
 ---
 
-**问题描述**
-在什么手机（品牌，系统版本），做什么操作，遇到什么问题？
+**功能或优化描述**
+请清晰而明确的描述，您希望我们实现或添加什么功能，对哪些功能点做优化。如果有可参考的第三方应用，请指出。多谢
 
-
-**补充信息（选填）**
-1.如果有明确的复现步骤，请详细说明
-2.如果是在国外，请说明
-3.如果有截图，请添加
-4.如果是特定图书出现的问题，请附加图书文件（需要压缩成.zip，才能提交为福建）
+**为什么重要**
+为什么你认为这个功能很重要？值得做？
